force-app/main/default/objects/Deal_Registration__c/Deal_Registration__c.object-meta.xml
<CustomObject>
    <label>Deal Registration</label>
    <nameField>
        <displayFormat>Deal_Reg-{00000}</displayFormat>
        <label>Deal Registration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>