force-app/main/default/objects/Deal_Registration__c/fields/ChangedFromSubmitted__c.field-meta.xml
<CustomField>
    <fullName>ChangedFromSubmitted__c</fullName>
    <label>Changed From Submitted</label>
    <type>DateTime</type>
</CustomField>