force-app/main/default/objects/Deal_Registration__c/fields/Company_Industry__c.field-meta.xml
<CustomField>
    <fullName>Company_Industry__c</fullName>
    <label>Company Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AdTech and AdNetwork</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Automotive and Transportation</fullName>
                <label>Automotive</label>
            </value>
            <value>
                <fullName>B2B Software</fullName>
            </value>
            <value>
                <fullName>B2C Internet Services</fullName>
            </value>
            <value>
                <fullName>Classifieds</fullName>
            </value>
            <value>
                <fullName>Consulting and Market Research</fullName>
            </value>
            <value>
                <fullName>CPG, Food and Beverages</fullName>
                <label>CPG</label>
            </value>
            <value>
                <fullName>Data Integrators</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Equity Research</fullName>
            </value>
            <value>
                <fullName>Financial services</fullName>
            </value>
            <value>
                <fullName>Gambling and Gaming</fullName>
            </value>
            <value>
                <fullName>Hedge Funds and Asset Management</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>Logistics and Shipping</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
                <label>Pharma and Healthcare</label>
            </value>
            <value>
                <fullName>VC and Private Equity</fullName>
                <label>Private Equity</label>
            </value>
            <value>
                <fullName>Public Sector, Non Profit, Fraud and Compliance</fullName>
            </value>
            <value>
                <fullName>Publishers and Media</fullName>
            </value>
            <value>
                <fullName>Retail and eCommerce</fullName>
            </value>
            <value>
                <fullName>Telecom and Hardware</fullName>
                <label>Telecom</label>
            </value>
            <value>
                <fullName>Travel and Hospitality</fullName>
                <label>Travel</label>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>