force-app/main/default/objects/Deal_Registration__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>