force-app/main/default/objects/Deal_Registration__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - 10</fullName>
            </value>
            <value>
                <fullName>11 - 50</fullName>
            </value>
            <value>
                <fullName>51 - 200</fullName>
            </value>
            <value>
                <fullName>201 - 500</fullName>
            </value>
            <value>
                <fullName>501 - 1000</fullName>
            </value>
            <value>
                <fullName>1001 -5000</fullName>
            </value>
            <value>
                <fullName>5001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>