force-app/main/default/objects/Deal_Registration__c/fields/Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number__c</fullName>
    <label>Customer Phone Number</label>
    <type>Phone</type>
</CustomField>