force-app/main/default/objects/Deal_Registration__c/fields/Customer_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Work_Email__c</fullName>
    <label>Customer Work Email</label>
    <type>Email</type>
</CustomField>