force-app/main/default/objects/Deal_Registration__c/fields/Deal_Description__c.field-meta.xml
<CustomField>
    <fullName>Deal_Description__c</fullName>
    <label>Deal Description</label>
    <type>TextArea</type>
</CustomField>