force-app/main/default/objects/Deal_Registration__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Account Management / Customer Success</fullName>
            </value>
            <value>
                <fullName>BI / Analytics</fullName>
            </value>
            <value>
                <fullName>Corporate Development / Mergers and Acquisitions</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Management (C-Level)</fullName>
            </value>
            <value>
                <fullName>Marketing: Affiliate / Media Buying</fullName>
            </value>
            <value>
                <fullName>Marketing: Management / General</fullName>
            </value>
            <value>
                <fullName>Marketing: PPC / Display</fullName>
            </value>
            <value>
                <fullName>Marketing: PR / Comms / Social Media</fullName>
            </value>
            <value>
                <fullName>Marketing: SEO / Content</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Sales / Business Development</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Strategy / Market Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>