force-app/main/default/objects/Deal_Registration__c/fields/DR_Handling_Time__c.field-meta.xml
<CustomField>
    <fullName>DR_Handling_Time__c</fullName>
    <formula>If(Ispickval(Status__c,&quot;Submitted&quot;),Now()-CreatedDate, Now()-ChangedFromSubmitted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR Handling Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>