force-app/main/default/objects/Deal_Registration__c/fields/Estimated_Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Deal_Value__c</fullName>
    <label>Estimated Deal Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>