force-app/main/default/objects/Deal_Registration__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Vice President (VP)</fullName>
            </value>
            <value>
                <fullName>C-Level</fullName>
            </value>
            <value>
                <fullName>CEO/President</fullName>
            </value>
            <value>
                <fullName>Professor/Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>