force-app/main/default/objects/Deal_Registration__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>