force-app/main/default/objects/Deal_Registration__c/fields/Partner_Reseller_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Reseller_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>#1088411</description>
    <label>Partner/Reseller Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <relationshipName>Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>