force-app/main/default/objects/Deal_Registration__c/fields/RegectionReason__c.field-meta.xml
<CustomField>
    <fullName>RegectionReason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Sales Process</fullName>
            </value>
            <value>
                <fullName>Insufficient Data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Active Account</fullName>
            </value>
            <value>
                <fullName>Not Relevant</fullName>
                <isActive>false</isActive>
                <label>Not Relevant</label>
            </value>
            <value>
                <fullName>Strategic - Owned by Sales</fullName>
                <isActive>false</isActive>
                <label>Strategic - Owned by Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>