force-app/main/default/objects/Deal_Registration__c/validationRules/Cant_edit_if_Status_not_equal_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_edit_if_Status_not_equal_Submitted</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
AND( 
$Profile.Name = &apos;SW Sales External&apos;, 
NOT(
TEXT(Status__c) = &apos;Submitted&apos;
)
), 


AND( 
$Profile.Name = &apos;SW Sales External&apos;, 
ISCHANGED(Status__c), 
TEXT(PRIORVALUE(Status__c)) = &apos;Submitted&apos; 
) 
)</errorConditionFormula>
    <errorMessage>You are not allowed to edit records when the Status is not &apos;Submitted&apos;</errorMessage>
</ValidationRule>