force-app/main/default/objects/Deal_Registration__c/validationRules/Other_Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Rejection_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>Ispickval(RegectionReason__c,&quot;Other&quot;)&amp;&amp; isblank(Other__c)</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>Please Populate Other Reason In the Relevant Field.</errorMessage>
</ValidationRule>