force-app/main/default/objects/Deal_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Company_Name__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Status__c</columns>
    <columns>RegectionReason__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>