force-app/main/default/objects/Deal_Registration__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Company_Name__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Status__c</columns>
    <columns>RegectionReason__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved</label>
</ListView>