force-app/main/default/objects/Deal_Registration__c/listViews/Resellers_Deal_Reg.listView-meta.xml
<ListView>
    <fullName>Resellers_Deal_Reg</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Resellers Deal Reg</label>
</ListView>